new(design)@codebuddy:新增 Windows 控制台 raw mode 的 FFM 实现技术探索笔记,并更新 CLI/TUI 设计文档 §11/§13 将 Windows 支持从'有限/不支持'更正为 FFM 零依赖全支持.